ch7.4.5/manifests/mattermost/mattermost-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mattermost
  name: mattermost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mattermost
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mattermost
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: "runtime/default"
    spec:
      containers:
      - image: k8spracticalguide/mattermost:4.10.2-non-root
        name: mattermost
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8065
        volumeMounts:
        - name: cm-volume
          mountPath: /mm/config
        livenessProbe:
          initialDelaySeconds: 90
          timeoutSeconds: 5
          periodSeconds: 15
          httpGet:
            path: /api/v4/system/ping
            port: 8065
        readinessProbe:
          initialDelaySeconds: 15
          timeoutSeconds: 5
          periodSeconds: 15
          httpGet:
            path: /api/v4/system/ping
            port: 8065
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - 5s
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
      volumes:
      - name: cm-volume
        configMap:
          name: mm-config-file
          items:
          - key: config.json
            path: config.json
status: {}
