ch7.4.5/manifests/mattermost/mattermost-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mattermost
spec:
  rules:
  - host: chat.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: mattermost
          servicePort: 8065
